--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <p>{{message}}</p>
 </div>
 <app-form></app-form>
+<app-order-list></app-order-list>
 <nav>
   <ul>
     <li> <a routerLink='/counter' routerLinkActive='active'> Counter</a></li>
