--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 </div>
 <app-form></app-form>
 <app-order-list></app-order-list>
+<app-user-list></app-user-list>
 <nav>
   <ul>
     <li> <a routerLink='/counter' routerLinkActive='active'> Counter</a></li>
