Ajout template Cleopatra Tailwind CSS et design ensemble des pages homes, products, orders, users

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<h1>{{title}}</h1>
+<!--<h1>{{title}}</h1>
 <div class="row">
   <p>{{message}}</p>
 </div>
 <app-form></app-form>
-<app-order-list></app-order-list>
-<app-user-list></app-user-list>
 <nav>
   <ul>
     <li> <a routerLink='/counter' routerLinkActive='active'> Counter</a></li>
     <li> <a routerLink='/productlist' routerLinkActive='active'> Product list</a></li>
     <li> <a routerLink='/config' routerLinkActive='active'>Config</a></li>
   </ul>
-</nav>
-<router-outlet></router-outlet>
+</nav>-->
+<main>
+  <router-outlet></router-outlet>
+</main>
