--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,25 @@
-<h2>Liste de produits :</h2>
-<div *ngFor="let Item of (productList| async)">
-    <product [productItem]="Item"> </product>
-</div >
+<app-navbar></app-navbar>
+<!-- strat wrapper -->
+<div class="h-screen flex flex-row flex-wrap">
+  <!-- end sidbar -->
+  <!-- start content -->
+  <div class="bg-gray-100 flex-1 p-6 md:mt-16">
+    <div class="card col-span-2 xl:col-span-1 mt-10 mb-10">
+      <div class="card-header flex flex-row justify-between">
+        <h1 class="h6">Liste de produits</h1>
+        <div class="flex flex-row justify-center items-center">
+          <button mat-raised-button class="font-bold btn-shadow">Ajouter Produit</button>
+        </div>
+      </div>
+        <!-- grid of products -->
+      <div class=" bg-gray-100 p-10">
+        <div class="grid grid-cols-5 gap-5 lg:grid-cols-2">
+          <div product [productItem]="Item" *ngFor="let Item of (productList| async)">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--end content-->
+  </div>
+</div>
