--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,8 @@
-<p>{{userItem.firstname}}</p>
-<p>{{userItem.lastname}}</p>
-<p>{{userItem.email}}</p>
+<td class="border border-l-0 px-4 py-2">
+  <div class="w-8 h-8 overflow-hidden rounded-full ml-3">
+    <img src={{userItem.img}} class="object-cover">
+  </div>
+</td>
+<td class="border border-l-0 px-4 py-2">{{userItem.firstname}}</td>
+<td class="border border-l-0 px-4 py-2">{{userItem.lastname}}</td>
+<td class="border border-l-0 border-r-0 px-4 py-2">{{userItem.email}}</td>
